--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "aos": "^3.0.0-beta.6",
         "bootstrap-icons": "^1.11.3"
     }
 }
